--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <script src="script.js"></script>
 <p id="output"></p><br>
-<input type="text" id="input" onkeyup="run()" />
+<input type="text" id="input" onkeyup="run()" /><br>
+<button onclick="insert()">Manual Code Point</button>
