--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <p id="output"></p><br>
 <input type="text" id="input" onkeyup="run()" /><br>
 <button onclick="insert()">Manual Code Point</button>
+<button onclick="lookup()">Code Point Lookup</button>
