--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src="script.js"></script>
-<p id="output"></p><br>
+<input type="text" id="output"></p><br>
 <input type="text" id="input" onkeyup="run()" /><br>
 <button onclick="insert()">Manual Code Point</button>
 <button onclick="lookup()">Code Point Lookup</button>
